--- a/index.html
+++ b/index.html
@@ -87,32 +87,32 @@
   <!-- Awesome services end-->
   <!-- Awesome Products start -->
   <section class="block m-8 max-w-7xl p-8 sm:px-10 mx-auto sm:grid lg:grid-cols-3 sm:grid-cols-2 gap-10">
-    <div class="bg-[#091020] cursor-pointer my-5 rounded-xl hover:scale-105 duration-500">
+    <div class="bg-[#091020] cursor-pointer my-5 rounded-xl hover:scale-105 duration-500 md:text-start text-center">
       <i class="px-8 py-10 text-4xl text-red-600 fa-solid fa-display"></i>
       <h1 class="px-8 pb-5 text-white font-semibold text-xl">Business Stratagy</h1>
       <p class="px-8 text-lg pb-10 text-gray-400">I throw myself down among the tall grass by the stream as I lie close to the earth.</p>
     </div>
-    <div class="bg-[#091020] cursor-pointer my-5 rounded-xl hover:scale-105 duration-500">
+    <div class="bg-[#091020] cursor-pointer my-5 rounded-xl hover:scale-105 duration-500 md:text-start text-center">
       <i class="px-8 py-10 text-4xl text-blue-600 fa-solid fa-layer-group"></i>
       <h1 class="px-8 pb-5 text-white font-semibold text-xl">Website Development</h1>
       <p class="px-8 text-lg pb-10 text-gray-400">I throw myself down among the tall grass by the stream as I lie close to the earth.</p>
     </div>
-    <div class="bg-[#091020] cursor-pointer my-5 rounded-xl hover:scale-105 duration-500">
+    <div class="bg-[#091020] cursor-pointer my-5 rounded-xl hover:scale-105 duration-500 md:text-start text-center">
       <i class="px-8 py-10 text-4xl text-green-600 fa-solid fa-user-group"></i>
       <h1 class="px-8 pb-5 text-white font-semibold text-xl">Marketing & Repoting</h1>
       <p class="px-8 text-lg pb-10 text-gray-400">I throw myself down among the tall grass by the stream as I lie close to the earth.</p>
     </div>
-    <div class="bg-[#091020] cursor-pointer my-5 rounded-xl hover:scale-105 duration-500">
+    <div class="bg-[#091020] cursor-pointer my-5 rounded-xl hover:scale-105 duration-500 md:text-start text-center">
       <i class="px-8 py-10 text-4xl text-cyan-400 fa-brands fa-connectdevelop"></i>
       <h1 class="px-8 pb-5 text-white font-semibold text-xl">Mobile Development</h1>
       <p class="px-8 text-lg pb-10 text-gray-400">I throw myself down among the tall grass by the stream as I lie close to the earth.</p>
     </div>
-    <div class="bg-[#091020] cursor-pointer my-5 rounded-xl hover:scale-105 duration-500">
+    <div class="bg-[#091020] cursor-pointer my-5 rounded-xl hover:scale-105 duration-500 md:text-start text-center">
       <i class="px-8 py-10 text-4xl text-purple-600 fa-solid fa-user-group"></i>
       <h1 class="px-8 pb-5 text-white font-semibold text-xl">Marketing & Repoting</h1>
       <p class="px-8 text-lg pb-10 text-gray-400">I throw myself down among the tall grass by the stream as I lie close to the earth.</p>
     </div>
-    <div class="bg-[#091020] cursor-pointer my-5 rounded-xl hover:scale-105 duration-500">
+    <div class="bg-[#091020] cursor-pointer my-5 rounded-xl hover:scale-105 duration-500 md:text-start text-center">
       <i class="px-8 py-10 text-4xl text-cyan-400 fa-brands fa-connectdevelop"></i>
       <h1 class="px-8 pb-5 text-white font-semibold text-xl">Mobile Development</h1>
       <p class="px-8 text-lg pb-10 text-gray-400">I throw myself down among the tall grass by the stream as I lie close to the earth.</p>
