--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     </div>
     <div class="max-w-7xl mx-auto px-5 sm:px-10 mt-48">
       <p class="text-gray-400 tracking-widest	">WELCOME TO MY WORLD</p>
-      <h1 class="my-8 sm:text-7xl text-6xl text-white font-extrabold">I'm Iron Man <br>
+      <h1 class="my-8 lg:text-6xl md:text-5xl text-4xl text-white font-extrabold">I'm Iron Man <br>
       <span class="text-red-600">AN AVENGER.</span>
       </h1>
-      <h1 class="md:text-6xl sm:text-5xl text-4xl text-white font-semibold">based in USA.</h1>
+      <h1 class="lg:text-6xl md:text-5xl text-4xl text-white font-semibold">based in USA.</h1>
       <button class="text-white text-xl md:text-2xl border-2 border-gray-700 rounded-[50px] px-8 py-4 font-semibold my-6 hover:bg-red-600 duration-500">DOWNLOAD CV</button>
     </div>
   </div>
@@ -52,16 +52,15 @@
   <section class="max-w-7xl grid lg:grid-cols-[40%_auto] grid-flow-row items-center mx-auto my-24 px-8 justify-center gap-8">
     <div class=""><img class=" lg:w-[483px] lg:h-[555px] md:w-4/5 w-full mx-auto object-cover bg-center rounded-2xl" src="./img/man-1.jpg" alt=""></div>
     <div class="">
-      <p class="inline text-xl font-bold text-transparent bg-gradient-to-r from-purple-600 to-pink-600 bg-clip-text">My About Details</p>
-      <h1 class="my-6 text-white text-5xl font-bold cursor-pointer">About Me</h1>
-      <p class="text-gray-400 text-xl">There are many variations of passages of Lorem Ipsum available, but the majority have suffered in some form, by injected humour.</p>
-      <div class="hidden sm:flex justify-between items-center md:w-3/4 lg:w-auto cursor-pointer pr-6 rounded-[50px] my-6 border-2 border-gray-500">
-        <h1 class="font-bold text-lg text-white bg-red-500 py-3 px-6 rounded-[50px]">Main Skills</h1>
-        <h1 class="font-bold text-lg text-white duration-500 hover:text-red-500">Experience</h1>
-        <h1 class="font-bold text-lg text-white duration-500 hover:text-red-500">Award</h1>
-        <h1 class="font-bold text-lg text-white duration-500 hover:text-red-500">Education</h1>
+      <p class="inline font-bold text-transparent bg-gradient-to-r from-purple-600 to-pink-600 bg-clip-text">My About Details</p>
+      <h1 class="my-6 text-white text-[32px] sm:text-4xl lg:text-5xl font-bold cursor-pointer">About Me</h1>
+      <p class="text-gray-400 sm:text-xl">There are many variations of passages of Lorem Ipsum available, but the majority have suffered in some form, by injected humour.</p>
+      <div class="flex justify-between items-center flex-wrap md:w-3/4 lg:w-auto cursor-pointer pr-6 sm:rounded-[50px] my-6 border-b-2 sm:border-2 border-gray-500">
+        <h1 class="font-bold sm:text-lg text-white bg-red-500 my-6 sm:my-0 py-3 px-6 rounded-[50px]">Main Skills</h1>
+        <h1 class="font-bold sm:text-lg text-white duration-500 mx-1 my-2 sm:my-0 hover:text-red-500">Experience</h1>
+        <h1 class="font-bold sm:text-lg text-white duration-500 mx-1 my-2 sm:my-0 hover:text-red-500">Award</h1>
+        <h1 class="font-bold sm:text-lg text-white duration-500 mx-1 my-2 sm:my-0 hover:text-red-500">Education</h1>
       </div>
-      <h1 class="sm:hidden block text-center my-5 font-bold text-lg text-white bg-red-500 py-3 px-6 rounded-[50px]">Main Skills</h1>
       <div class="text-gray-400 font-bold my-5">
         <div class="mb-5">
           <div class="flex justify-between text-xl mb-5">
@@ -100,21 +99,6 @@
           </div>
         </div>
       </div>
-      <h1 class="sm:hidden block text-center my-5 font-bold text-lg text-white bg-red-500 py-3 px-6 rounded-[50px]">Award</h1>
-      <p class="text-gray-400 mb-5 sm:hidden">Awwwards.com - Winner<br>2019-2020</p>
-      <p class="text-gray-400 mb-5 sm:hidden">CSS Design Awards - Winner<br>2017-2018</p>
-      <p class="text-gray-400 mb-5 sm:hidden">Design nominees - siteof the day<br>2013-2014</p>
-      <p class="text-gray-400 mb-5 sm:hidden">Graphic Designer of the year<br>2015-2016</p>
-      <h1 class="sm:hidden block text-center my-5 font-bold text-lg text-white bg-red-500 py-3 px-6 rounded-[50px]">Experience</h1>
-      <p class="text-gray-400 mb-5 sm:hidden">Sr. Front-end Engineer - Google<br>2018 - Current</p>
-      <p class="text-gray-400 mb-5 sm:hidden">Front-end Engineer - Microsoft<br>2017 - 2018</p>
-      <p class="text-gray-400 mb-5 sm:hidden">Software Engineer - Alibaba<br>2013- 2014</p>
-      <p class="text-gray-400 mb-5 sm:hidden">Lead Software Engineer - Amazon<br>2019- 2020</p>
-      <h1 class="sm:hidden block text-center my-5 font-bold text-lg text-white bg-red-500 py-3 px-6 rounded-[50px]">Education</h1>
-      <p class="text-gray-400 mb-5 sm:hidden">MSc In CSE - Institute, Los Angeles, CA<br>2010</p>
-      <p class="text-gray-400 mb-5 sm:hidden">BSc In CSE - ABC Institute, Los Angeles, CA<br>2009</p>
-      <p class="text-gray-400 mb-5 sm:hidden">Diploma in Computer Science - Gamma Technical Institute<br>2009</p>
-      <p class="text-gray-400 mb-5 sm:hidden">Graphic Designer - ABC Institute, Los Angeles, CA<br>2007</p>
     </div>
   </section>
   <!-- Man-1 section end -->
